--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
             <li class="popup__item">
                 <div class="popup__item-caption" ng-click="toggleSubmenu($event)">Заполнить форму</div>
                 <ul class="popup__list popup__list_level_2">
-                    <li class="popup__item" ng-repeat="form in options.forms track by $index" ng-if="checkSite(form.sites)">
+                    <li class="popup__item" ng-repeat="form in options.forms track by $index">
                         <div class="popup__item-caption" ng-click="fillForm(form)">{{ form.title }}</div>
                     </li>
                 </ul>
