--- a/options.html
+++ b/options.html
@@ -3,58 +3,59 @@
 <html lang="en" ng-app="app" ng-csp>
 <head>
     <meta charset="utf-8">
-    <title>Whotrades</title>
-    <link rel="stylesheet" href="/css/whotrades.css">
+    <title>Whotrades ext. options</title>
+    <link rel="stylesheet" href="/css/common.css">
     <script src="/js/angular.js"></script>
+    <script src="/js/common.js"></script>
     <script src="/js/options.js"></script>
 </head>
 
 <body ng-controller="Options">
     <div class="options">
         <span class="button button_theme_blue button_type_file is-float-right">
-            <span>Загрузить настройки</span>
+            <span>{{ i18n('uploadOptions') }}</span>
             <input type="file">
         </span>
 
-        <h1 class="heading heading_1">Настройки</h1>
+        <h1 class="heading heading_1">{{ i18n('options') }}</h1>
 
         <p><hr class="separator"></p>
 
-        <h2 class="heading heading_2" style="display: inline-block;">Формы</h2>
-        <span class="link link_pseudo" style="margin-left: 20px;" ng-click="addForm()">Добавить</span>
+        <h2 class="heading heading_2" style="display: inline-block;">{{ i18n('forms') }}</h2>
+        <span class="link link_pseudo" style="margin-left: 20px;" ng-click="addForm()">{{ i18n('add') }}</span>
 
         <div class="options__form" ng-repeat="form in options.forms track by $index">
             <div class="options__row">
                 <div class="options__cell options__cell_w_90">
-                    <label class="options__label">Название</label>
+                    <label class="options__label">{{ i18n('title') }}</label>
                     <input class="input" type="text" ng-model="form.title">
                 </div>
                 <div class="options__cell options__cell_w_10">
                     <label class="options__label">&nbsp;</label>
-                    <span class="link link_pseudo options__row-remove" ng-click="removeForm($index)">Удалить</span>
+                    <span class="link link_pseudo options__row-remove" ng-click="removeForm($index)">{{ i18n('remove') }}</span>
                 </div>
             </div>
 
             <fieldset class="options__fieldset">
-                <legend><b>Элементы формы</b></legend>
+                <legend><b>{{ i18n('formElements') }}</b></legend>
                 <div class="options__row">
                     <div class="options__cell options__cell_w_30">
-                        <label class="options__label">Тип</label>
+                        <label class="options__label">{{ i18n('type') }}</label>
                     </div>
                     <div class="options__cell options__cell_w_30">
-                        <label class="options__label">Ключ (name)</label>
+                        <label class="options__label">{{ i18n('key') }} (name)</label>
                     </div>
                     <div class="options__cell options__cell_w_30">
-                        <label class="options__label">Значение (value)</label>
+                        <label class="options__label">{{ i18n('value') }} (value)</label>
                     </div>
                 </div>
 
                 <div class="options__row" ng-repeat="item in form.items track by $index">
                     <div class="options__cell options__cell_w_30">
                         <select class="input" ng-model="item.type">
-                            <option value="text" ng-selected="!item.type">Простой текст</option>
-                            <option value="randomText">Случайный текст</option>
-                            <option value="email">Сгенерированный E-mail</option>
+                            <option value="text" ng-selected="!item.type">{{ i18n('plainText') }}</option>
+                            <option value="randomText">{{ i18n('randomText') }}</option>
+                            <option value="email">{{ i18n('generatedEmail') }}</option>
                         </select>
                     </div>
                     <div class="options__cell options__cell_w_30">
@@ -64,16 +65,16 @@
                         <input class="input" type="text" ng-model="item.value">
                     </div>
                     <div class="options__cell options__cell_w_10">
-                        <span class="link link_pseudo options__row-remove" ng-click="removeFormItem(form, $index)">Удалить</span>
+                        <span class="link link_pseudo options__row-remove" ng-click="removeFormItem(form, $index)">{{ i18n('remove') }}</span>
                     </div>
                 </div>
 
-                <p><span class="link link_pseudo" ng-click="addFormItem(form)">Добавить</span></p>
+                <p><span class="link link_pseudo" ng-click="addFormItem(form)">{{ i18n('add') }}</span></p>
             </fieldset>
         </div>
 
         <div ng-if="options">
-            <button class="button button_theme_blue" ng-click="save()">Сохранить</button>
+            <button class="button button_theme_blue" ng-click="save()">{{ i18n('save') }}</button>
             <span class="option__message option__message_type_{{ msg.type }}" ng-if="msg">{{ msg.text }}</span>
         </div>
     </div>
